--- a/hyperman.yml
+++ b/hyperman.yml
@@ -1,5 +1,5 @@
-- name: Hyperman
-- version: 0.1.0
-- creator: Orpheus
-- github: github.com/orpheus/hyperman-go
+name: Hyperman
+version: 0.1.0
+creator: Orpheus
+github: github.com/orpheus/hyperman-go
 
