--- a/cryptogen/cryptogen.yml
+++ b/cryptogen/cryptogen.yml
@@ -1,9 +1,8 @@
-# Cryptogen fabric binary name. Change only if you generated a custom
-# binary name during build ouptut
+# Cryptogen fabric binary name. 
+# Change only if you generated a custom  binary name during build ouptut
 cryptogenBinaryName: "cryptogen"
-# Path to hyperman cmdscript to generate crypto given a config path and
-# output path
-scriptPath: "../scripts/cryptogen.sh"
+# Path to hyperman cryptogen command script
+scriptPath: "../cmdscripts/cryptogen.sh"
 # Config and Output paths to organization crypto config and materal
 configs:
   org-orderer:
