--- a/networks/testNetwork/nodes/peers/peer-01/hyperspace.yaml
+++ b/networks/testNetwork/nodes/peers/peer-01/hyperspace.yaml
@@ -11,9 +11,9 @@ environment:
       #- FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=../../../cryptogen/organizations/peerOrginizations/org1.example.com/peers/peer0.org1.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=../../../cryptogen/organizations/peerOrginizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=../../../cryptogen/organizations/peerOrginizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
+      - CORE_PEER_TLS_CERT_FILE=../../../cryptogen/organizations/testOrgs/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=../../../cryptogen/organizations/testOrgs/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=../../../cryptogen/organizations/testOrgs/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
       # Peer specific variabes
       - CORE_PEER_ID=peer0.org1.example.com
       - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
@@ -23,4 +23,5 @@ environment:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051                                                                                                                                                                  
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_OPERATIONS_LISTENADDRESS=127.0.0.1:9444
 
