--- a/networks/testNetwork/nodes/peers/peer-02/hyperspace.yaml
+++ b/networks/testNetwork/nodes/peers/peer-02/hyperspace.yaml
@@ -23,4 +23,10 @@ environment:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:9051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:9051
       - CORE_PEER_LOCALMSPID=Org2MSP
+      # Added by me: so doesn't clash with 9443 whatever's running there
       - CORE_OPERATIONS_LISTENADDRESS=127.0.0.1:9445
+      # Added by me: Send ledger snapshots to tmp disk
+      - CORE_LEDGER_SNAPSHOTS_ROOTDIR=/tmp/hyperledger/peer-02/ledger/snapshots
+      - CORE_PEER_ID=PEER_02
+      - CORE_PEER_OPERATIONS_LISTENADDRESS=127.0.0.1:6052
+      - CORE_PEER_MSPCONFIGPATH=../../../cryptogen/organizations/testOrgs/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp
