+!:spawn 1o2p test network
ports aren't clashing, scripts aren't failing. 2 peers, 1 orderer network

--- a/networks/testNetwork/nodes/peers/peer-01/hyperspace.yaml
+++ b/networks/testNetwork/nodes/peers/peer-01/hyperspace.yaml
@@ -31,3 +31,4 @@ environment:
       - CORE_PEER_OPERATIONS_LISTENADDRESS=127.0.0.1:6051
       - CORE_PEER_MSPCONFIGPATH=../../../cryptogen/organizations/testOrgs/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp
       - CORE_PEER_FILESYSTEMPATH=ledger
+      - CORE_PEER_PROFILE_LISTENADDRESS=0.0.0.0:6061
