--- a/networks/testNetwork/hyperspace.yaml
+++ b/networks/testNetwork/hyperspace.yaml
@@ -1,5 +1,8 @@
 # Hyperspace Network Configuration
 
+# todo: generate this file
+
+
 # Path to Hyperspace cmdscript. Should this path be
 # relative to the cmdscripts directory?
 # that way I can just list the file-name here...
